--- a/styles.scss
+++ b/styles.scss
@@ -7,6 +7,7 @@
 body {
     width: 100%;
     box-sizing: content-box;
+    overflow-x:hidden;
 }
 // HEADER
 header {
@@ -72,8 +73,92 @@ header {
         .btn:hover {
             background-color: orange;
         }
-    
 }
 
 // MAIN
+
+.equipo {
+    margin-top: 1.5em;
+    width: 100%;
+    border: 1px solid red;
+    padding: 0;
+}
+.persona {
+    width: 100%;
+    height: 18vh;
+    padding: 0;
+}
+.cont {
+    padding-top: 0.6em;
+    height: 15vh;
+    z-index: 1;
+    width: 100%;
+    color: white;
+}
+.cont:hover {
+    color: black;
+}
+
+.forma1 {
+    position: absolute;
+    height: 15vh;
+    background-color: #183f57;
+    border-top-right-radius: 100px 100px ;
+    border-bottom-right-radius: 100px 100px;
+    width: 70%;
+    padding: 0;
+    transition: 0.5s;
+    z-index: 0;
+}
+.forma2 {
+    position: absolute;
+    height: 15vh;
+    background-color: #183f57;
+    border-top-left-radius: 100px 100px ;
+    border-bottom-left-radius: 100px 100px;
+    width: 70%;
+    padding: 0;
+    transition: 0.5s;
+    z-index: 0;
+}
+.cont:hover ~ .forma1 {
+    background-color: orange;
+    width: 105%;
+}
+.cont:hover ~ .forma2 {
+    background-color: orange;
+    width: 105%;
+}
+.fot1 {
+    position:absolute;
+    object-fit: cover;
+    height: 250px;
+    width: 250px;
+    border-radius: 100%;
+    z-index: 1;
+    left: 10%;
+}
+.fot2 {
+    position:absolute;
+    object-fit: cover;
+    height: 250px;
+    width: 250px;
+    border-radius: 100%;
+    z-index: 1;
+    right: 10%;
+}
+.btn-e {
+    height: 40px;
+    width: 180px;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 25px 25px 25px;
+    border: 1px solid yellow;
+    transition: 0.5s;
+    color: white;
+}
+
+.btn-e:hover {
+    background-color: yellow;
+    color: black;
+}
 
