--- a/styles.scss
+++ b/styles.scss
@@ -3,6 +3,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: 'Barlow', sans-serif !important;
 }
 body {
     width: 100%;
@@ -98,7 +99,6 @@ header {
 .cont:hover {
     color: black;
 }
-
 .forma1 {
     position: absolute;
     height: 15vh;
