aniamciones, secciones 'servicios' y 'como creamos tu proyecto'

--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,17 @@ body {
 
 header {
   height: 100vh;
+  background-color: rgba(0, 0, 0, 0.65);
+  color: white;
 }
 
 header .navbar {
   height: 60px;
-  background-color: rgba(255, 255, 255, 0.501);
+  background-color: rgba(255, 255, 255, 0);
   z-index: 0;
   position: fixed;
   width: 100% !important;
+  transition: 0.3s ease-in-out;
 }
 
 header .navbar .navbar-nav {
@@ -42,6 +45,12 @@ header .navbar .trans {
   flex-direction: row;
 }
 
+header .nav-active {
+  background-color: #111111;
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
 header .hvid {
   object-fit: cover;
   width: 100%;
@@ -55,7 +64,7 @@ header .title {
 }
 
 header .tit {
-  color: black;
+  color: white;
   font-size: 4em;
 }
 
@@ -75,15 +84,16 @@ header .btn {
   border: 1px solid orange;
   margin-top: 5%;
   transition: 0.5s;
+  color: white;
 }
 
 header .btn:hover {
   background-color: orange;
+  color: black;
 }
 
 .first {
   margin-top: 1.5em;
-  margin-bottom: 1.5em;
 }
 
 .tit_1 {
@@ -93,7 +103,7 @@ header .btn:hover {
 .containerforma {
   width: 100%;
   padding: 0;
-  margin-top: 50px;
+  margin-top: 15px;
   height: 200px;
 }
 
@@ -114,13 +124,82 @@ header .btn:hover {
 }
 
 .servicios {
-  height: 500px;
+  height: 50vh;
+}
+
+.btn-s {
+  height: 40px;
+  width: 180px;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 25px 25px 25px;
+  border: 1px solid #46b594;
+  margin-top: 5%;
+  transition: 0.5s;
+}
+
+.btn-s:hover {
+  background-color: #46b594;
+}
+
+.cctp {
+  height: auto;
+  margin-bottom: 1em;
+}
+
+.secciones {
+  height: 7vh;
+  background-color: #fecc45;
+  border-top-right-radius: 100px 100px;
+  border-bottom-right-radius: 100px 100px;
+  border-top-left-radius: 100px 100px;
+  border-bottom-left-radius: 100px 100px;
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+.sec {
+  width: 100%;
+  height: 100%;
+}
+
+.sec_cont {
+  margin: 1px;
+}
+
+.seccion {
+  position: relative;
+  width: 100%;
+  height: 70%;
+}
+
+.circulo {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background-color: orange;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.seccion:hover {
+  font-weight: bold;
+}
+
+.desc {
+  width: 100%;
+}
+
+.desc .imagen {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.562);
 }
 
 .equipo {
   margin-top: 1.5em;
   width: 100%;
-  border: 1px solid red;
   padding: 0;
 }
 
