--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 
 body {
   width: 100%;
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   overflow-x: hidden;
 }
 
@@ -69,12 +70,17 @@ header .navbar {
   z-index: 0;
   position: fixed;
   width: 100% !important;
+  -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
 
 header .navbar .navbar-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly !important;
+  -webkit-box-pack: space-evenly !important;
+      -ms-flex-pack: space-evenly !important;
+          justify-content: space-evenly !important;
   width: 100%;
 }
 
@@ -83,22 +89,30 @@ header .navbar .navbar-brand {
 }
 
 header .navbar .nl:focus {
-  text-decoration: underline #f08036 3px;
+  -webkit-text-decoration: underline #f08036 3px;
+          text-decoration: underline #f08036 3px;
 }
 
 header .navbar .trans {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 header .nav-active {
   background-color: #464646;
-  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
+          box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
   z-index: 2;
 }
 
 header .hvid {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -119,7 +133,9 @@ header .subtit {
 }
 
 header .btn-h {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 header .btn {
@@ -129,6 +145,7 @@ header .btn {
   border-radius: 25px 25px 25px;
   border: 1px solid #fecc45;
   margin-top: 5%;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   color: white;
 }
@@ -157,6 +174,7 @@ header .btn:hover {
   border-radius: 25px 25px 25px;
   border: 1px solid #46b594;
   margin-top: 5%;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
@@ -217,7 +235,8 @@ header .btn:hover {
 }
 
 .desc .imagen {
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.562);
+  -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.562);
+          box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.562);
 }
 
 .equipo {
@@ -252,6 +271,7 @@ header .btn:hover {
   border-bottom-right-radius: 100px 100px;
   width: 70%;
   padding: 0;
+  -webkit-transition: 0.5s !important;
   transition: 0.5s !important;
   z-index: 0;
 }
@@ -264,6 +284,7 @@ header .btn:hover {
   border-bottom-left-radius: 100px 100px;
   width: 70%;
   padding: 0;
+  -webkit-transition: 0.5s !important;
   transition: 0.5s !important;
   z-index: 0;
 }
@@ -280,7 +301,8 @@ header .btn:hover {
 
 .fot1 {
   position: absolute;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 250px;
   width: 250px;
   border-radius: 100%;
@@ -290,7 +312,8 @@ header .btn:hover {
 
 .fot2 {
   position: absolute;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 250px;
   width: 250px;
   border-radius: 100%;
@@ -304,6 +327,7 @@ header .btn:hover {
   background-color: rgba(0, 0, 0, 0);
   border-radius: 25px 25px 25px;
   border: 1px solid #fecc45;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   color: white;
 }
@@ -323,6 +347,7 @@ header .btn:hover {
   background-color: rgba(0, 0, 0, 0);
   border-radius: 25px 25px 25px;
   border: 1px solid #46b594;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   color: black;
 }
@@ -354,14 +379,26 @@ header .btn:hover {
 }
 
 .foo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .trans {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .trans .tl {
