--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 }
 
 header {
+  width: 100%;
   height: 100vh;
 }
 
@@ -19,7 +20,7 @@ header .navbar {
   background-color: rgba(255, 255, 255, 0.501);
   z-index: 0;
   position: fixed;
-  width: 100% !important;
+  width: 100vw !important;
 }
 
 header .navbar .navbar-nav {
@@ -61,6 +62,14 @@ header .hvid {
 }
 
 header .title {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding-top: 8em !important;
 }
 
@@ -74,6 +83,16 @@ header .subtit {
 }
 
 header .btn-h {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
