--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,7 @@ body {
 }
 // HEADER
 header {
+    width: 100%;
     height: 100vh;
 
     .navbar {
@@ -17,12 +18,13 @@ header {
         background-color: rgba(255, 255, 255, 0.501);
         z-index: 0;
         position: fixed;
-        width: 100% !important;
+        width: 100vw !important;
 
         .navbar-nav {
             display: flex;
             justify-content: space-evenly !important;
             width: 100%;
+           
         }
         .navbar-brand {
             font-size: 2em !important;
@@ -46,6 +48,9 @@ header {
     }
 
     .title {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
         padding-top: 8em !important;
     }
         .tit {
@@ -57,6 +62,9 @@ header {
         }
     
     .btn-h {
+        display: flex;
+        flex-direction: column;
+        align-items: space-between;
         justify-content: center;
     }
         .btn {
